Made tPanel which generates ticket objects in mainGUI

--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -11,3 +11,9 @@
 /MainGUI$5.class
 /MainGUI$6.class
 /MainGUI$7.class
+/tPanel.class
+/tPanel$1.class
+/tPanel$2.class
+/tPanel$3.class
+/tPanel$4.class
+/tPanel$5.class
