Added Menu Editor Window

--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,20 +1,4 @@
-/ConfigFile.class
-/FileLoader.class
-/Item.class
-/Main$1.class
-/Menu.class
-/Order.class
-/Ticket.class
+/MenuEditor.class
+/MainGUI$2$1.class
 /MainGUI$2.class
-/MainGUI$3.class
-/MainGUI$4.class
-/MainGUI$5.class
-/MainGUI$6.class
-/MainGUI$7.class
-/tPanel.class
-/tPanel$1.class
-/tPanel$2.class
-/tPanel$3.class
-/tPanel$4.class
-/tPanel$5.class
-/MainGUI$1.class
+/MenuEditor$1.class
