Fully Functional MenuEditor with updated Menu class and optimized FileLoader
FileLoader now reads and writes to a file readable by excel

MenuEditor GUI is fully functional and Menu variable is now private

--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -2,3 +2,9 @@
 /MainGUI$2$1.class
 /MainGUI$2.class
 /MenuEditor$1.class
+/MenuEditor$2.class
+/MenuEditor$3.class
+/MenuEditor$4.class
+/MenuEditor$5.class
+/MenuEditor$6.class
+/MainGUI$3.class
