added functionality to Ticket Editor

--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -8,3 +8,13 @@
 /MenuEditor$5.class
 /MenuEditor$6.class
 /MainGUI$3.class
+/TicketBuilder.class
+/TicketBuilder$1.class
+/TicketBuilder$2.class
+/TicketBuilder$3.class
+/TicketBuilder$4.class
+/TicketBuilder$5.class
+/TicketBuilder$6.class
+/MenuEditor$7.class
+/TicketBuilder$7.class
+/tPanel$6.class
